# BMP_editor

./: CMakeLists.txt  Editor.cpp  Editor.h  LICENSE  MyImage.cpp  MyImage.h  Pixel.h  README.md  main.cpp
src/: main.cpp
src/Editor/: Editor.cpp  Editor.h
src/MyImage/: MyImage.cpp  MyImage.h
